Force blurred text to be fixed length

--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -120,3 +120,7 @@
 #question-answer-thumbs-down {
   color:red;
 }
+
+.mask_character_original_value {
+  display: none;
+}
